Wed May 24 13:19:13 1995  Matti Aarnio  <mea@nic.funet.fi>

	* unix.c, unix_tcp.c, protocol.c, prototypes.h:
	    Still more revisions into NBSTREAM processing code,
	    also tried to improve sending speed, which now clocks
	    to 50kB/s or better.. ( Previously 30kB/s was tops
	    with 0.25 sec timeout on select(), now select timeout
	    is changed to 1.0 sec :-)  )

Thu May 18 02:51:44 1995  Matti Aarnio  <mea@nic.funet.fi>

	* sendfile.c:
	    Revised target-address processing..

	* nmr.c, send.c:
	    Consider only codes below ASCII ' ' (SPACE) to be bad on message
	    transmission. -- Lets 8-bit ISO-Latin chars go thru as is...

	* ebcdic.h, ebcdicinv.c:
	    Made a 1:1 mapping in between ASCII and EBCDIC in true
	    JNET fashion (likely exactly same table as they have..)

Mon Apr 24 08:48:51 1995  Matti Aarnio  <mea@nic.funet.fi>

	* sendfile.c:
	    A bit stricter processing of target address - to ensure that
	    it follows the 8+8 limits of NJE..

	* transfer.c:
	    Check that the file-path given to us is absolute -- that is,
	    it starts with "/".

	* consts.h, io.c vmnet_monitor():
	    "VMNET MONITOR" probe interval changed to 60 seconds,
	    and full timeout to 4*60 seconds.
	    Now ONE slow-responding case (like temporary connectivity
	    breakdown) won't break the link.

Fri Apr 21 11:23:23 1995  Matti Aarnio  <mea@nic.funet.fi>

	* unix.c, util.c:
	    A bit more processing when the emulator gets SIGHUP:
		- close (and open) route table
		- close (and open) RSCS accounting file
		- close (open is implicitic) Spoolid cache
		- re-read File-Exits
		- re-read Msg-Exits
		- close (and open) logfile.

	* consts.h, unix_tcp.c, unix.c:
	    Under some unclear conditions the InBuffer and/or XmitBuffer
	    appeared to be overfull -> data following it becomes over-
	    written causing all kinds of havock...  Re-arranged buffers
	    so that such overwrite corrupts (at first) dataset-headers,
	    and only then goes out to next buffer in chain..